@@ -30,6 +30,7 @@
 - Change: Moved the parameter analysis to the declaration
   analysis classes.
 - Change: Empty configuration sections are not rendered anymore.
+- Change: Always allow a none rendering of configuration settings.
 
 4.1.5
 - Bugfix: Unnecessary uri encoding in the smoky grey skin prevents
